<resources>
    <string name="app_name">小白</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- listview -->
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开可以刷新</string>
    <string name="header_hint_refresh_loading">加载中&#8230;</string>
    <string name="header_hint_refresh_time">更新时间：</string>
    <string name="footer_hint_load_normal">更多</string>
    <string name="footer_hint_load_ready">松开加载更多</string>

    <string name="network">请检查网络设置</string>
    <string name="login_num">电话:</string>
    <string name="login_passwd">密码:</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="find_passwd">忘记密码</string>

    <!--图片选择-->
    <string name="piece">张</string>
    <string name="you_have_a_select_limit">最多选择%1$s张图片</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="complete">完成</string>
    <string name="all_images">全部图片</string>
</resources>
